--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -8,7 +8,19 @@
 }
 
 
-.header { grid-area: header; }
+
+/* Overall Styling */
+
+.header { 
+    grid-area: header; 
+    background: linear-gradient( rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../images/header.jpg'); 
+    display: grid; 
+    justify-items: center; 
+    align-items: center; 
+    font-family: 'Peddana', serif; 
+    color:white; 
+    font-size: 40px; 
+}
 .footer { grid-area: footer; }
 .main { grid-area: main; }
 
@@ -17,12 +29,216 @@ body {
 	grid-template-areas: "header header header"
 	                     ". main ."
 	                     "footer footer footer";
-	grid-template-columns: 350px 1fr 350px;
-	grid-template-rows: 300px 
+	grid-template-columns: 450px 1fr 450px;
+	grid-template-rows: 400px 
 						1fr
 						30px;
 	min-height: 100vh;
 }
+
+.main-content {
+    padding: 10px;
+    font-family: 'Bitter', serif;
+}
+
+.main-content h2 {
+    font-weight: 200;
+}
+
+
+/* Navigation */
+
+.main > .navbar {
+    display: flex;
+    height: 30px;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.main > .navbar > .link {
+    text-decoration: none;
+    color: black;
+    font-family: 'Bitter', serif;
+}
+
+.main > .navbar-mobile {
+    display: none;
+    width: 100%;
+}
+
+.navbar-mobile > .dropbtn {
+    width: 100%;
+    background-color: #333;
+    color: white;
+    padding: 5px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.navbar-mobile > .dropbtn:hover, .navbar-mobile > .dropbtn:focus {
+    background-color: gray;
+}
+
+.navbar-mobile > .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.navbar-mobile > .dropdown-content {
+    width: 100%;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    box-shadow: 0 4px 2px -2px gray;
+}
+
+.navbar-mobile > .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #ddd}
+
+.show {display:block !important;}
+
+
+
+/* Frontpage */
+
+.home {
+    display: grid;
+    grid-template-areas: "info aside"
+                         "products aside";
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-column-gap: 100px;
+    grid-row-gap: 50px; 
+}
+
+.home > .home-info {
+    grid-area: info;
+}
+
+.home > .home-info > h2 {
+    padding-bottom: 15px;
+}
+
+.home > .home-info > p {
+    padding-bottom: 10px;
+}
+
+.home > .home-aside {
+    grid-area: aside;
+}
+
+.home > .home-aside > form {
+    width: 100%;
+    height: 55px;
+}
+
+.home > .home-aside > form > input {
+    box-sizing: border-box;
+    width: 100%;
+    border: 7px solid #87ceeb;
+    padding-left: 5px;
+    line-height: 25px;
+}
+
+.home > .home-aside > .home-news {
+    margin-top: 10px;
+}
+
+.home > .home-aside > .home-news > .home-news-text {
+    display: grid;
+    padding: 5px;
+}
+
+.home > .home-aside > .home-news > .home-news-text > h2 {
+    margin-bottom: 5px;
+}
+
+.home > .home-aside > .home-news > .home-news-text > p {
+    font-size: 14px;
+    margin-bottom: 2px;
+} 
+
+.home > .home-aside img {
+    width: 244px;
+}
+
+.home > .home-aside > .home-news > .home-news-text > a {
+    justify-self: center;
+    width: 80%;
+    height: 30px;
+    background-color: #87ceeb;
+    box-shadow: none;
+    border: none;
+    color: white;
+    line-height: 30px;
+    text-decoration: none;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.home > .home-products {
+    grid-area: products;
+}
+
+.home > .home-products > .home-products-box {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    grid-column-gap: 40px;
+}
+
+.home > .home-products > .home-products-box > .product {
+    display: grid;
+    height: 50%;
+    justify-items: center;
+    width: 150px;
+}
+
+.home > .home-products > .home-products-box > .product img {
+    width: 150px;
+}
+
+.home > .home-products > .home-products-box > .product > a {
+    width: 100%;
+    height: 40px;
+    background-color:  #87ceeb;
+    text-decoration: none;
+    color: white;
+    padding: 5px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+
+/* Footer */
+
+.footer {
+    background-color: #333;
+    color: white;
+    font-family: 'Bitter', serif;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
+
+
+
+
+
+
 
 @media screen and (max-width: 600px) {
 	body {
@@ -33,27 +249,42 @@ body {
 		grid-template-rows: 100px 
 							1fr
 							30px;
-	}
+    }
+
+    .header {
+        font-size: 20px;
+        background: linear-gradient( rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../images/header-mobile.jpg'); 
+        background-position: center;
+    }
+
+    .main > .navbar {
+        display: none;
+    }
+
+    .main > .navbar-mobile {
+        display: inline-block;
+    }
+    
+    .home {
+        grid-template-areas: "info"
+                             "aside"
+                             "products";
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
+    }
+
+    .home > .home-aside img {
+        width: 100%;
+    }
+
+    .home > .home-products > .home-products-box {
+        grid-template-columns: 1fr;
+    } 
+    .home > .home-products > .home-products-box > .product {
+        width: 100%;
+    }
+
+    .home > .home-products > .home-products-box > .product img {
+        width: 100%;
+    }
 }
-
-
-/* Navigation */
-
-.main > .navbar {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    justify-items: center;
-    grid-template-rows: 30px;
-    align-items: center;
-    background-color: grey;
-}
-
-.main > .navbar > .link {
-    text-decoration: none;
-    color: black;
-    font-family: 'Bitter', serif;
-}
-
-
-/* Frontpage */
-
