--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -527,6 +527,35 @@ body {
     .gallery > .albums {
         grid-template: repeat(6, 1fr) / repeat(2, 1fr);
     }
+
+    .boats-table, .boats-table thead, .boats-table tbody, .boats-table th, .boats-table td, .boats-table tr { 
+		display: block; 
+    }
+    
+    .boats-table thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+
+    .boats-table tbody tr {
+        margin-bottom: 20px;
+        padding: 10px;
+    }
+
+    .boats-table tbody .content-row {
+        -webkit-box-shadow: 0px 2px 3px 2px rgba(176,174,176,0.75);
+        -moz-box-shadow: 0px 2px 3px 2px rgba(176,174,176,0.75);
+        box-shadow: 0px 2px 3px 2px rgba(176,174,176,0.75);
+
+    }
+
+    .boats-table td:not(.boat-image):before {
+        content: attr(data-column) '\a';
+        white-space: pre-wrap;
+        font-weight: bold;
+    }
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 999px) {
