--- a/assets/css/adminCustom.css
+++ b/assets/css/adminCustom.css
@@ -1,20 +1,18 @@
 
 /* General Styling */
 
-
-
-.button {
-    text-decoration: none;
-    color: #878787;
-    background-color: white;
-    padding: 10px;
-    -webkit-box-shadow: 0px 1px 2px 1px rgba(157, 157, 157, 0.75);
-    -moz-box-shadow: 0px 1px 2px 1px rgba(157, 157, 157, 0.75);
-    box-shadow: 0px 1px 2px 1px rgba(157, 157, 157, 0.75);
-}
-
 .demo-content {
     padding: 20px;
+}
+
+.success {
+    padding: 15px;
+    background-color: green;
+}
+
+div.error {
+    padding: 10px;
+    background-color: red;
 }
 
 
@@ -34,19 +32,25 @@
 
 .create-news form input {
     padding: 15px;
-    color: white;
+    color: black;
     background-color: transparent;
     border: 1px solid #6b6b6b;
     transition-duration: 0.5s;
 }
 
 .create-news form input:focus {
+    color: white;
     background-color: #3f3f3f; 
     transition-duration: 0.5s;
 }
 
 .create-news form input[type="submit"] {
     background-color: #3f3f3f;
+    color: white;
+}
+
+.ck-editor {
+    border: 1px solid #6b6b6b !important;
 }
 
 .ck-editor__editable {
