--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -326,6 +326,8 @@ body {
 }
 
 .event {
+    width: 100%;
+    max-width: 900px;
     padding: 10px;
     margin-bottom: 30px;
     display: grid;
@@ -360,12 +362,12 @@ body {
 }
 
 .event img {
-    width: 100%;
+    max-height: 600px;
 }
 
 .event > .event-text {
     display: grid;
-    max-width: 900px;
+    width: 100%;
 }
 
 
