--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -384,6 +384,7 @@ body {
 }
 
 .gallery > .albums {
+    position: relative;
     width: 100%;
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(4, 1fr);
@@ -394,13 +395,17 @@ body {
     width: 100%;
 }
 
+.gallery > .albums .album {
+    position: relative;
+}
+
 .gallery > .albums .album .album-overlay {
     position: absolute;
     top: 0;
-    bottom: 0;
+    bottom: 5px;
     left: 0;
     right: 0;
-    height: 100%;
+    max-height: 100%;
     width: 100%;
     opacity: 0;
     transition: .5s ease;
@@ -420,6 +425,10 @@ body {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
+}
+
+.lightbox_img:hover {
+    cursor: pointer;
 }
 
 
