--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -133,6 +133,8 @@ body {
 
 
 
+
+
 /*=============================================
 =                     Home                    =
 =============================================*/
@@ -244,6 +246,11 @@ body {
     padding: 5px;
     box-sizing: border-box;
     font-size: 14px;
+}
+
+#newsletter > p {
+    line-height: 40px;
+    color: green;
 }
 
 
