--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -56,6 +56,10 @@ body {
     font-weight: 200;
 }
 
+.login h3 {
+    justify-self: center;
+}
+
 
 
 /*=============================================
@@ -409,6 +413,10 @@ form.search input {
     padding-bottom: 10px;
 }
 
+.event > .event-text > .sub {
+    justify-self: end;
+}
+
 .event a  {
     justify-self: end;
     height: 30px;
@@ -420,7 +428,7 @@ form.search input {
     text-decoration: none;
     text-align: center;
     margin-top: 10px;
-    padding: 3px;
+    padding: 5px;
 }
 
 .event img {
@@ -430,6 +438,10 @@ form.search input {
 .event > .event-text {
     display: grid;
     width: 100%;
+}
+
+.event .eventNoSub {
+    background-color: darkgreen;
 }
 
 
@@ -566,7 +578,7 @@ form.search input {
 =============================================*/
 
 .profile {
-    width: 50%;
+    width: 60%;
 }
 
 .profile > img {
